3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/item.c: Fix bug with identified potions not getting set to proper name.
MSW 2002-10-03

Bugfixes:  Add golem_count element to player structure so we can properly
   detect when golem is destroyed.  This fixes a crash in some places as the
   code tried to remove this already removed golem.
  Fix crash when null player maps.
include/player.h: Add golem_count element to player structure.
server/player.c: Add code in handle_newscs_player() that checks status of
    golem, clears op->contr->golem is value is bogus
server/spell_effect.c, server/spell_util.c: Initialize golem_count 
    value when golem is created.
socket/request.c: Check for null map value.
MSW 2002-10-02

Mostly bugfixes, but the addition of a wiz 'hide' command which makes the
   wiz out of sight so to speak.
--
common/loader.l, common/loader.c: Fix bug where flag values were being saved
   with actual value of the flag (eg, 32768, 16, etc) instead of 1/0 value -
   Code effectively worked the same, just was a bit odd looking at save files.
include/player.h: Add hidden element to player structure.
include/sproto.h: Add command_hide(), update proto for players_on_map()
lib/Makefile.am, lib/Makefile.in: add wizhelp/hide file.
server/apply.c: Add error checking to converts so it doesn't crash if the
   converter doesn't have a proper other_arch.  Modify shopmats so that they
   don't transport spell effects, like fireballs an burning hands.
server/attack.c: Modify code so players can drain other players exp.
server/c_misc.c: Modify various functions to not show info on hidden DM.
server/c_wiz.c: Add command_hide(), clean up command_invisible() a bit.